*** empty log message ***

--- a/homepage/download.html
+++ b/homepage/download.html
@@ -73,8 +73,16 @@
 
         <br><br>
 
+        <span class="content_main_bold">Additional Modules</span><br><br>
+        <i>Templates that can be used to create your own recipe module. Extract the zip file to your Data Crow installation folder. You can further tweak this module by using the
+        Alter Module Wizard. These module templates will <b>not</b> be upgraded by the Data Crow system. This means that whenever I decide to release a new version of this template your existing recipe module
+        will not be converted or upgraded to this new version. It is solely meant as a base to create your own module.</i><br><br>
+        <li>Recipe Module: <a href="http://heanet.dl.sourceforge.net/sourceforge/datacrow/recipe_module.zip" target="new">Recipe Module</a><br></li>
+
+        <br><br>
+
         <span class="content_main_bold">Documentation</span><br><br>
-        Data Crow has an internal help system. However for some functionality the internal help is simply not enough. For these topics separate manuals have been created.<br><br>
+        <i>Data Crow has an internal help system. However for some functionality the internal help is simply not enough. For these topics separate manuals have been created.</i><br><br>
         <li>Developer Guide: <a href="http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_developer_guide.pdf" target="new">PDF</a><br></li>
         <li>UML Class Diagram: <a href="http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_developer_guide.zargo" target="new">Zargo (ArgoUML)</a></li>
         <li>How to create your own modules: <a href="http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_howto_create_modules.pdf" target="new">PDF</a></li>
