*** empty log message ***

--- a/help/settings/general.html
+++ b/help/settings/general.html
@@ -13,7 +13,7 @@
     Define how the name of persons should be displayed by default.
 
 	<h2>Check for value uniqueness upon saving</h2>
-	Data Crow will check if the item is unique before it is saved. Uniqueness is determined by the values of key field (<a href="fields.html">more about this). If the item is not unique it will not be saved and a message will be displayed.<br>
+	Data Crow will check if the item is unique before it is saved. Uniqueness is determined by the values of key field (<a href="fields.html">more about this</a>). If the item is not unique it will not be saved and a message will be displayed.<br>
 	This option is enabled by default and I do not recommend turning it off
 
 	<h2>Check for required fields</h2>
