*** empty log message ***

--- a/help/tools/item_export.html
+++ b/help/tools/item_export.html
@@ -7,7 +7,35 @@
 
   <h1>Item Export Wizard</h1>
   The item export wizard allows you to export items to an external file. Items of each module within Data Crow can
-  be exported. The wizard will guide you through the steps.
+  be exported. Before the wizard is started you will be asked to select the module from which you like to export the items.
+
+  <h2>Formats</h2>
+  The wizard is capable to export items to a text or a XML file. XML is the preferred format as the items will be stored in
+  a hierarchical structure rather then a flat, single line, structure. The XML format is also the preferred format when exchanging items
+  between Data Crow installations. The XML format is also used internally by Data Crow for operations like the module export and import.
+  <br><br>
+  The text export exports the items to a text file. Each line represents a single item. The values are separated by a character
+  which you can define in the configuration step of the wizard.
+
+  <h2>Configuration options</h2>
+
+  <h3>Export File</h3>
+  Select the target file (mandatory).
+
+  <h3>Images</h3>
+  In the second step of the wizard you can choose to export the images. This is recommended as the images are then stored in a sub folder
+  of the location of the report file.
+
+  <ul>
+  <li /><i>Copy Images</i><br>Copies the images to a sub folder.
+  <li /><i>Scale Images</i><br>You can choose to store a smaller version of the original image. Specify the width and the height.
+          The original proportions are kept so that will not end up with malformed image sizes.
+  </ul>
+
+  <h3>Text length</h3>
+  You can indicate the maximum text length. The value "0" means that text will not be cut. Data Crow will try and find the nice position possible
+  to cut the text. For example right after a dot or an end of line character.
+
 
   </body>
 </html>
