*** empty log message ***

--- a/help/general/menubar.html
+++ b/help/general/menubar.html
@@ -10,13 +10,16 @@
     Items can be created, deleted, or opened. You can also view events or quit the application
 
     <h2>Administration</h2>
-    Maintain genres, categories, etc., templates and view the loan information. 
+    Maintain genres, categories, etc., templates and view the loan information.
 
     <h2>Experience Level</h2>
-    Set the experience level to either expert or beginner. 
+    Set the experience level to either expert or beginner.
 
     <h2>Modules</h2>
-    Allows you to select the module you want to use without using the module panel and contains links to the <a href="../modules/createmodulewizard.html">create</a>, <a href="../modules/altermodulewizard.html">alter</a> and <a href="../modules/relatemodulewizard.html">relate</a> module wizards. 
+    Allows you to select the module you want to use without using the module panel and contains links to the <a href="../modules/createmodulewizard.html">create</a>,
+    <a href="../modules/altermodulewizard.html">alter</a>, <a href="../modules/copymodulewizard.html">copy</a>,
+    <a href="../modules/exportmodulewizard.html">export</a>, <a href="../modules/importmodulewizard.html">import</a> and
+    <a href="../modules/relatemodulewizard.html">relate</a> module wizards.
 
     <h2>View</h2>
     Contains links to the different views, such as the table and the list view. Also the Look and Feel can be changed
