*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -67,6 +67,14 @@
         can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">18/10/2009 ~ Data Crow 3.6 has been released</span><br><br>
+        With this version Data Crow delivers a huge set of new module builder tools. Most importantly it is now very easy to share your custom made module (including its items) with other users.
+		Furthermore you can now use any other module as a template when creating a new one. There are many other new features such as the file operations (move, delete and locate), a new online service (ISBNdb.com) and
+		ISBN parsing from PDF documents. <br>
+		Additionally each item within Data Crow can now be assigned one or more external references such as an ASIN (Amazon.com) or a Disc ID. Existing separate fields are migrated to this new structure.
+		The greatest advantage of this functionality is that is now easier for Data Crow to match existing items with items retrieved from external sources.
+
+        <br><br><br>
         <span class="content_main_bold">26/09/2009 ~ Data Crow 3.5.1 has been released</span><br><br>
 		The latest release, 3.5.1, is a maintenance release. It contains small fixes for the online services and improves the module wizards.
 
@@ -322,13 +330,13 @@
 
 	<br><br>
 
-	<span class="content_main_bold">26/09/2009<br>Data Crow 3.5.1 has been released</span><br>
-	A maintenance release. Small fixes for the online services and a small improvement to the module wizards.
+    <span class="content_main_bold">18/10/2009<br>Data Crow 3.6 has been released</span><br>
+    This new version delivers a huge set of new functionality for module builder as well as other improvements.
 
 	<br><br>
 
-    <span class="content_main_bold">20/09/2009<br>Data Crow 3.5 has been released</span><br>
-    The 3.5 version improves the ISBN search, adds a language and country module and improves the Amazon.com and IMDB.com online services.
+	<span class="content_main_bold">26/09/2009<br>Data Crow 3.5.1 has been released</span><br>
+	A maintenance release. Small fixes for the online services and a small improvement to the module wizards.
 
     <!-- NEWS END -->
 
@@ -354,9 +362,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_1_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_1_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_1_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_6_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_6_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_6_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -373,7 +381,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_1_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_6_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
