*** empty log message ***

--- a/homepage/donate.html
+++ b/homepage/donate.html
@@ -96,15 +96,16 @@
 
 	<br><br>
 
-    <span class="content_main_bold">18/10/2009<br>Data Crow 3.6 has been released</span><br>
-    This new version delivers a huge set of new functionality for module builder as well as other improvements.
+	<span class="content_main_bold">30/10/2009<br>Data Crow 3.7 beta has been released</span><br>
+	Faster and leaner! This beta version delivers a huge performance boost!
 
 	<br><br>
 
-	<span class="content_main_bold">26/09/2009<br>Data Crow 3.5.1 has been released</span><br>
-	A maintenance release. Small fixes for the online services and a small improvement to the module wizards.
+    <span class="content_main_bold">18/10/2009<br>Data Crow 3.6 has been released</span><br>
+    This new version delivers a huge set of new functionality for module builder as well as other improvements.
 
     <!-- NEWS END -->
+
 
 
     </td>
