--- a/homepage/news.html
+++ b/homepage/news.html
@@ -67,6 +67,11 @@
         can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">30/10/2009 ~ Data Crow 3.7 beta has been released</span><br><br>
+        Faster and leaner! This beta version delivers a huge performance boost!
+        The views are now filled instantly which gives Data Crow a huge performance boost. Furthermore has the memory usage been reduced. The reduction in memory usage is most notable on installation with a 1000 or more items. Please help me in testing this release!
+
+        <br><br><br>
         <span class="content_main_bold">18/10/2009 ~ Data Crow 3.6 has been released</span><br><br>
         With this version Data Crow delivers a huge set of new module builder tools. Most importantly it is now very easy to share your custom made module (including its items) with other users.
 		Furthermore you can now use any other module as a template when creating a new one. There are many other new features such as the file operations (move, delete and locate), a new online service (ISBNdb.com) and
@@ -330,13 +335,13 @@
 
 	<br><br>
 
-    <span class="content_main_bold">18/10/2009<br>Data Crow 3.6 has been released</span><br>
-    This new version delivers a huge set of new functionality for module builder as well as other improvements.
+	<span class="content_main_bold">30/10/2009<br>Data Crow 3.7 beta has been released</span><br>
+	Faster and leaner! This beta version delivers a huge performance boost!
 
 	<br><br>
 
-	<span class="content_main_bold">26/09/2009<br>Data Crow 3.5.1 has been released</span><br>
-	A maintenance release. Small fixes for the online services and a small improvement to the module wizards.
+    <span class="content_main_bold">18/10/2009<br>Data Crow 3.6 has been released</span><br>
+    This new version delivers a huge set of new functionality for module builder as well as other improvements.
 
     <!-- NEWS END -->
 
