*** empty log message ***

--- a/homepage/download.html
+++ b/homepage/download.html
@@ -83,9 +83,7 @@
 
         <br><br>
         <span class="content_main_bold">Additional Modules</span><br><br>
-        <i>Templates that can be used to create your own recipe module. Extract the zip file to your Data Crow installation folder. You can further tweak this module by using the
-        Alter Module Wizard. These module templates will <b>not</b> be upgraded by the Data Crow system. This means that whenever I decide to release a new version of this template your existing recipe module
-        will not be converted or upgraded to this new version. It is solely meant as a base to create your own module.</i><br><br>
+        <i>These modules can be imported using the import module wizard.</i><br><br>
         <li>Recipe Module: <a href="http://heanet.dl.sourceforge.net/sourceforge/datacrow/recipe_module.zip" target="new">Recipe Module</a><br></li>
 
         <br><br>
