--- a/homepage/donate.html
+++ b/homepage/donate.html
@@ -70,11 +70,12 @@
         <br><br><br>
 
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="84491">
-            <input type="image" src="https://www.paypal.com/nl_NL/NL/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="">
-            <img alt="" border="0" src="https://www.paypal.com/nl_NL/i/scr/pixel.gif" width="1" height="1">
-        </form>
+		<input type="hidden" name="cmd" value="_s-xclick">
+		<input type="hidden" name="hosted_button_id" value="9508739">
+		<input type="image" src="https://www.paypal.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+		<img alt="" border="0" src="https://www.paypal.com/nl_NL/i/scr/pixel.gif" width="1" height="1">
+		</form>
+
         <i>Direct Paypal donation</i>
 
         <br><br><br>
@@ -96,16 +97,15 @@
 
 	<br><br>
 
-	<span class="content_main_bold">30/10/2009<br>Data Crow 3.7 beta has been released</span><br>
-	Faster and leaner! This beta version delivers a huge performance boost!
+    <span class="content_main_bold">07/11/2009<br>Data Crow 3.7 has been released</span><br>
+    Faster and leaner! This version delivers an enormous performance boost!
 
 	<br><br>
 
-    <span class="content_main_bold">18/10/2009<br>Data Crow 3.6 has been released</span><br>
-    This new version delivers a huge set of new functionality for module builder as well as other improvements.
+	<span class="content_main_bold">30/10/2009<br>Data Crow 3.7 beta has been released</span><br>
+	Faster and leaner! This beta version delivers a huge performance boost!
 
     <!-- NEWS END -->
-
 
 
     </td>
@@ -130,9 +130,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_6_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_6_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_6_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_7_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_7_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_7_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -149,7 +149,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_6_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_7_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
