--- a/homepage/news.html
+++ b/homepage/news.html
@@ -67,6 +67,10 @@
         can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">15/11/2009 ~ Data Crow 3.8.1 has been released</span><br><br>
+        Contains bugfixes for the 3.8 version.
+
+        <br><br><br>
         <span class="content_main_bold">10/11/2009 ~ Data Crow 3.8 has been released</span><br><br>
         For the most part a bugfix upon the 3.7 version but contains new online services as well.
 
@@ -344,13 +348,14 @@
 
 	<br><br>
 
-	<span class="content_main_bold">10/11/2009<br>Data Crow 3.8 has been released</span><br>
-	For the most part a bugfix upon the 3.7 version but contains new online services as well.
+	<span class="content_main_bold">15/11/2009<br>Data Crow 3.8.1 has been released</span><br>
+	Contains bugfixes for the 3.8 version.
 
 	<br><br>
 
-    <span class="content_main_bold">07/11/2009<br>Data Crow 3.7 has been released</span><br>
-    Faster and leaner! This version delivers an enormous performance boost!
+	<span class="content_main_bold">10/11/2009<br>Data Crow 3.8 has been released</span><br>
+	For the most part a bugfix upon the 3.7 version but contains new online services as well.
+
 
     <!-- NEWS END -->
 
@@ -376,9 +381,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_1_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_1_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_1_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -395,7 +400,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_1_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
