*** empty log message ***

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -74,20 +74,20 @@
 
         Start using <h2>the ultimate cataloger</h2> today!<br><br>
 
-		<li/> Completely <h1>portable</h1>; you can even run it from a USB stick.
+		<li/> Platform independent and completely <h1>portable</h1>.
         <li/> Highly customizable and feature rich.
-        <li/> Audio, software, book, movie and photo <h1>collection cataloger.</h1>
-        <li/> Retrieve information from services like Amazon.com and Imdb.com.
-        <li/> Optional web module; a web interface and an integrated web server.
+        <li/> Audio, software, book, movie and photo <h1>collection</h1> <h1>cataloger</h1>.
+        <li/> Retrieve information from services like Amazon.com, Imdb.com, Softpedia and MusicBrainz.
+        <li/> Optional internal web server and web GUI.
         <li/> Import file information (mp3, divx, xvid, ..)
         <li/> Loan registration.
         <li/> PDF and HTML reporting.
         <li/> Create new modules to, for example, maintain your stamp collection.
-        <li/> <b>New!</b> Available translations: Italian, German, Dutch, English and French.
+        <li/> Available translations: Italian, German, Dutch, English, Spanish and French.
 
         <br><br>
         Data Crow is 100% free and 100% free of ads, viruses and spyware.<br>
-        Data Crow runs on any system where <strong>Java from <a href="http://java.sun.com">Sun</a></strong> is installed.<br>
+        Data Crow runs on any system where <strong>Java 1.6 (or higher) from <a href="http://java.sun.com">Sun</a></strong> is installed.<br>
 
         <br><br>
         <center><a href="http://sourceforge.net/projects/datacrow" target="new"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=84631&amp;type=3" border="0" alt="SourceForge.net Logo" /></a><br>
@@ -107,14 +107,13 @@
 
 	<br><br>
 
-	<span class="content_main_bold">15/11/2009<br>Data Crow 3.8.1 has been released</span><br>
-	Contains bugfixes for the 3.8 version.
+	<span class="content_main_bold">17/11/2009<br>Data Crow 3.8.2 has been released</span><br>
+	Minor bug fixes and an additional online service for the software module: Softpedia.
 
 	<br><br>
 
-	<span class="content_main_bold">10/11/2009<br>Data Crow 3.8 has been released</span><br>
-	For the most part a bugfix upon the 3.7 version but contains new online services as well.
-
+	<span class="content_main_bold">15/11/2009<br>Data Crow 3.8.1 has been released</span><br>
+	Contains bugfixes for the 3.8 version.
 
     <!-- NEWS END -->
 
@@ -141,9 +140,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_1_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_1_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_1_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_2_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_2_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_2_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -160,7 +159,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_1_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_2_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
