--- a/homepage/news.html
+++ b/homepage/news.html
@@ -67,6 +67,13 @@
         can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">17/11/2009 ~ Data Crow 3.8.2 has been released</span><br><br>
+        Maybe I am taking the &quot;release often approach&quot; to its very limits: here is yet another minor release containing small fixes and an additional online service:
+        Softpedia. This online service can be used to find information on non commercial titles. Together with the previous new online services
+        (Sourceforge.net and FreeBookSpot) Data Crow now offers information on downloadable (free) content instead of solely using the online service to retrieve information on
+        commercial titles. You can expect more of these kind of services to be added in the near future.
+
+        <br><br><br>
         <span class="content_main_bold">15/11/2009 ~ Data Crow 3.8.1 has been released</span><br><br>
         Contains bugfixes for the 3.8 version.
 
@@ -348,14 +355,13 @@
 
 	<br><br>
 
-	<span class="content_main_bold">15/11/2009<br>Data Crow 3.8.1 has been released</span><br>
-	Contains bugfixes for the 3.8 version.
+	<span class="content_main_bold">17/11/2009<br>Data Crow 3.8.2 has been released</span><br>
+	Minor bug fixes and an additional online service for the software module: Softpedia.
 
 	<br><br>
 
-	<span class="content_main_bold">10/11/2009<br>Data Crow 3.8 has been released</span><br>
-	For the most part a bugfix upon the 3.7 version but contains new online services as well.
-
+	<span class="content_main_bold">15/11/2009<br>Data Crow 3.8.1 has been released</span><br>
+	Contains bugfixes for the 3.8 version.
 
     <!-- NEWS END -->
 
@@ -381,9 +387,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_1_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_1_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_1_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_2_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_2_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_2_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -400,7 +406,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_1_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_2_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
