*** empty log message ***

--- a/homepage/reviews.html
+++ b/homepage/reviews.html
@@ -66,12 +66,16 @@
         There are some sites which have written an article or a review on Data Crow. Some of these reviews might be based on an older version of the Data Crow cataloguer software. However these reviews and articles might still give you a better impression of the Data Crow software.
 
         <br><br><br>
+        <span class="content_main_bold">Softpedia's review on Data Crow 3.8.1</span><br><br>
+        <i>Data Crow is really an amazing piece of software. It lets you store and manage a large array of media, with more of them coming through regular updates. It's customizable, extendable, easy to learn to use, has a lot of usage options in various domains, and lets you track all the changes in a smart and easy way. I can only recommend this software to you if you are one of the people that have big collections and like to store them appropriately, so that they can be easily found.</i>
+        <a href="http://www.softpedia.com/reviews/linux/Data-Crow-Review-40868.shtml">full review</a>
+
+        <br><br><br>
         <span class="content_main_bold">HiTechLegion</span><br><br>
 
         <i>We have hundreds of CD's, books, DVD's, Blu-Ray discs, tapes, so much media and no way to keep track of it. How many times have loaned out a book or a movie only to forget who has it and then when you need it you don't have it. How frustrating is that?
            I think we have the solution. Data Crow is an open source java application pioneered by Robert Jan van der Waals</i>
         <a href="http://www.hitechlegion.com/reviews/software/390-datacrow?showall=1">full review</a>
-
 
         <br><br><br>
         <span class="content_main_bold">Penguin sightings review on Data Crow 3.2</span><br><br>
@@ -83,12 +87,6 @@
         <span class="content_main_bold">Computer Totaal</span><br><br>
         <i>Wie vroeger een verzameling aanlegde, deed dit met postzegels, theezakjes, kroonkurken, voetbalplaatjes etc. Tegenwoordig is het moeilijk om geen verzamelaar te zijn. Foto's, video's, films, software, contactpersonen: er zijn zoveel facetten van ons leven die te groot of uitgebreid zijn om te onthouden, dat het wel heel handig zou zijn als er een programma was om al die dingen te organiseren. Data Crow pretendeert dat programma te zijn.</i>
         <a href="http://www.computertotaal.nl/web/Artikelpaginas/Download-artikel/Data-Crow-3.3.htm">full review</a>
-
-        <br><br><br>
-        <span class="content_main_bold">Softpedia's review on Data Crow 2.9.1 beta</span><br><br>
-        <i>Data Crow is a media cataloger software with many features which makes collection
-         managing a very easy and pleasant process. However, it needs a bit more polishing and bug fixes before it could be described as 'perfect'....</i>
-        <a href="http://www.softpedia.com/reviews/linux/Data-Crow-Review-40868.shtml">full review</a>
 
         <br><br><br>
         <span class="content_main_bold">Linux.com's article on Data Crow</span><br><br>
