*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -71,7 +71,8 @@
         Maybe I am taking the &quot;release often approach&quot; to its very limits: here is yet another minor release containing small fixes and an additional online service:
         Softpedia. This online service can be used to find information on non commercial titles. Together with the previous new online services
         (Sourceforge.net and FreeBookSpot) Data Crow now offers information on downloadable (free) content instead of solely using the online service to retrieve information on
-        commercial titles. You can expect more of these kind of services to be added in the near future.
+        commercial titles. You can expect more of these kind of services to be added in the near future.<br><br>
+        Furthermore I am really proud of the review that Softpedia.com has written on Data Crow. The review can be found in the reviews section.
 
         <br><br><br>
         <span class="content_main_bold">15/11/2009 ~ Data Crow 3.8.1 has been released</span><br><br>
