*** empty log message ***

--- a/homepage/links.html
+++ b/homepage/links.html
@@ -84,8 +84,10 @@
         <br><br><br>
 
         <span class="content_main_bold">Sites mentioning Data Crow</span><br><br>
+        <li/><a href="http://www.computerbild.de/download/Data-Crow-4796720.html" target="new"><img src="http://media.computerbild.de/downloads/1422105/cb_logo_100.jpg"></img></a>
         <li/><a href="http://www.downloadtube.com/Windows/Others/Data-Crow-download.html" target="new">DownloadTube</a>
         <li/><a href="http://www.bestfreewaredownload.com/">Best Freeware Download</a>
+        <li/><a href="http://freeware.uwpagina.nl">Freeware.uwpagina.nl</a>
         <li/><a href="http://www.hitechlegion.com/reviews/software/390-datacrow?showall=1" target="new">HiTechLegion</a>
         <li/><a href="http://www.freewarebb.com/Data-Crow-321-file173.html" target="new">FreewareBB</a>
         <li/><a href="http://linux.softpedia.com/get/Information-Management/Data-Crow-18608.shtml" target="new">Softpedia</a>
