--- a/homepage/reviews.html
+++ b/homepage/reviews.html
@@ -68,7 +68,7 @@
         <br><br><br>
         <span class="content_main_bold">Softpedia's review on Data Crow 3.8.1</span><br><br>
         <i>Data Crow is really an amazing piece of software. It lets you store and manage a large array of media, with more of them coming through regular updates. It's customizable, extendable, easy to learn to use, has a lot of usage options in various domains, and lets you track all the changes in a smart and easy way. I can only recommend this software to you if you are one of the people that have big collections and like to store them appropriately, so that they can be easily found.</i>
-        <a href="http://www.softpedia.com/reviews/linux/Data-Crow-Review-40868.shtml">full review</a>
+        <a href="http://www.softpedia.com/reviews/mac/Data-Crow-Review-127098.shtml">full review</a>
 
         <br><br><br>
         <span class="content_main_bold">HiTechLegion</span><br><br>
@@ -86,7 +86,7 @@
         <br><br><br>
         <span class="content_main_bold">Computer Totaal</span><br><br>
         <i>Wie vroeger een verzameling aanlegde, deed dit met postzegels, theezakjes, kroonkurken, voetbalplaatjes etc. Tegenwoordig is het moeilijk om geen verzamelaar te zijn. Foto's, video's, films, software, contactpersonen: er zijn zoveel facetten van ons leven die te groot of uitgebreid zijn om te onthouden, dat het wel heel handig zou zijn als er een programma was om al die dingen te organiseren. Data Crow pretendeert dat programma te zijn.</i>
-        <a href="http://www.computertotaal.nl/web/Artikelpaginas/Download-artikel/Data-Crow-3.3.htm">full review</a>
+        <a href="http://computertotaal.nl/article/2741/data-crow-3-3.html">full review</a>
 
         <br><br><br>
         <span class="content_main_bold">Linux.com's article on Data Crow</span><br><br>
