*** empty log message ***

--- a/homepage/links.html
+++ b/homepage/links.html
@@ -79,7 +79,7 @@
 
 		<span class="content_main_bold">Data Crow Material</span><br><br>
 		<li/><a href="http://www.downloadtube.com/Data-Crow-demo-installation-windows.html" target="new">DownloadTube: Data Crow Instruction Video</a>
-		<li/><a href="http://portableapps.com/node/20087" target="new">PortableApps: Portable Data Crow Distribution</a>
+		<li/><a href="http://portableapps.com/node/20087" target="new">PortableApps: a portable Data Crow Distribution</a>
 
         <br><br><br>
 
