*** empty log message ***

--- a/help/tools/mass_update.html
+++ b/help/tools/mass_update.html
@@ -14,6 +14,10 @@
 
 	<h2>Online Service Configuration</h2>
 	The Online service configuration is the same as for the normal online search functionality. The settings and options are explained <a href="../onlinesearch/onlinesearch.html">here</a>.
+	
+	<h3>Use original service settings</h3>
+	The service information is stored per item after the item has been retrieved or updated by an online service.
+	This information can be reused to update the item. This is convenient when you want to make sure the information is in sync with the source from which the item was retrieved. 
 
 	<h2>File processing configuration</h2>
 	Indicate if you want the re-read the information from the files (such as a music file or a video file).
