--- a/help/tools/fileinformationimport.html
+++ b/help/tools/fileinformationimport.html
@@ -13,7 +13,8 @@
 
 	<h1>Files and Directories</h1>
 	Here you can select the files to import. Navigate the tree and tick the directories and/or filed from which you would like to import the content.
-
+	If you cannot find the location you are looking for you can simple add by pressing the add button right next to the drives drop down.
+	From there you can add any location and it will usable within the while system.
 
 	<h1>Settings</h1>
 
@@ -44,6 +45,10 @@
          <br>The directory in which the music file resides has the artist name and its sub-directory has the album name
              (example ..\..\Abba\Abba Gold).</li>
     </lu>
+    
+    <h2>Saving items</h2>
+    You can choose to save items directly into the database instead of adding them first to the new items tab. 
+    Using this option (save directly; bypass the new items tab) reduces the memory needed by the importer. 
 
     <h2>Title Cleaning</h2>
     
