*** empty log message ***

--- a/homepage/links.html
+++ b/homepage/links.html
@@ -91,6 +91,7 @@
         <li/><a href="http://www.computeridee.nl/downloads.jsp?rubriek=1620616&id=2361857" target="new">Computer Idee (Dutch PC magazine)</a>
         <li/><a href="http://www.computerbild.de/download/Data-Crow-4796720.html" target="new">Computer Bild (German PC magazine)</a>
         <li/><a href="http://www.downloadstad.nl/download/Data_Crow.html" target="new">DownloadStad.nl</a>
+        <li/><a href="http://www.esoft.web.id/audio-video/data-crow-386-complete-music-catalog-movies-software-books-and-more.html" target="new">Esoft Web Id</a>
         <li/><a href="http://www.downloadtube.com/Windows/Others/Data-Crow-download.html" target="new">DownloadTube (also has a video about Data Crow)</a>
         <li/><a href="http://www.bestfreewaredownload.com/freeware/k-data-crow-t-free-data-crow-freeware-rcodtxpx.html">Best Freeware Download</a>
         <li/><a href="http://www.freewarebb.com/Data-Crow-321-file173.html" target="new">FreewareBB</a>
