*** empty log message ***

--- a/homepage/faq.html
+++ b/homepage/faq.html
@@ -68,6 +68,18 @@
             This page should cover most of the commonly asked questions about Data Crow cataloger software.
 
             <br><br><br>
+            <span class="content_main_bold">Windows Vista / Windows 7 installation issues</span><br><br>
+            To overcome permission issues on Windows Vista and Windows 7 make sure to run the installer as
+            an administrator user (if you do not know how to do this google 'run as administrator'). 
+            This is sufficient for the installer to complete successfully. 
+            <br><br>Additionally I would recommend <b>not</b>
+            to install Data Crow in the Program Files folder. Windows Vista and Windows 7 are very restrictive towards
+            programs running from this folder. This is an issue for Data Crow as it writes all information (settings
+            and data files) to its very own installation folder.
+            <br><br>
+            Oh, and don't forget: the installer and Data Crow need Java (1.6 or higher) to be installed on the system.
+
+            <br><br><br>
             <span class="content_main_bold">I downloaded the installation and now I got myself a jar file .. ?</span><br><br>
 
             Try a "double-click" first. The jar file is a self-executing file.
