--- a/help/loan/loan.html
+++ b/help/loan/loan.html
@@ -16,7 +16,7 @@
     Specify the person to which the item will be lend and specify the date on which the loan starts. If the loan start date is today (or in the past) the item will be marked as unavailable. The item cannot be lend to anyone else until the item has been returned. Note that there are 3 fields available which tell you more about the loan status, "Available", "Loaned By" and "Days Loaned". These can be added by using the "field settings"  <a href="../settings/fields.html" target="main">more about this</a>
 
     <h2>Returning an item</h2>
-    Items loaned to a person can be registered as "returned". Press "Return Item". By default the item's return date is today. You can enter a different date in the "end date" field before pressing the "Return Item" button.
+    Items borrowed by a person can be registered as "returned". Press "Return Item". By default the item's return date is today. You can enter a different date in the "end date" field before pressing the "Return Item" button.
 
     <h2>Filtering</h2>
     As stated before there are three fields available which tell something about the loan status, "Available", "Loaned By" and "Days Loaned". These fields can be used to create a filter (<a href="../filters/filters.html" target="main">more about this</a>). Using filters you can easily keep track on your loans.
