*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -67,6 +67,13 @@
         can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">October 29, 2010 ~ Data Crow 3.9 BETA II has been released</span><br><br>
+   	    An exciting new version! Major perfomance improvements and loads of fixes. This version does not deliver any
+        new functionality. It is however a total makeover (although internally) of the product. Memory usage has been 
+        minimized as well as processor time required.
+        This is the 2nd beta and should be tested by anyone willing to help out. See the change log for the details.
+
+        <br><br><br>
         <span class="content_main_bold">June 19, 2010 ~ Data Crow 3.8.16 has been released</span><br><br>
    	    Minor fixes only.
 
