*** empty log message ***

--- a/help/items/itemform.html
+++ b/help/items/itemform.html
@@ -24,8 +24,8 @@
 	Not all modules offer this functionality. If this feature is available then there is an "Update" button in the lower part of the item form.  
 	The Online Update allows you to find (and use) information about your item using an online service. More on this is explained <a href="../onlinesearch/onlinesearch.html">here</a>.
 
-    <h2>Attach File Info</h2>
-    To read the information from a movie file, a music file, etc go to the "file" menu and select "attach file info". If the item already has a filename defined, the information from that file is (re-) read. Otherwise a dialog is opened which allows you to browse for the file from which you want the information to be read. Data Crow will read the information from the file and update the values in the item form. 
+    <h2>Read file information</h2>
+    To read the information from a movie file, a music file, etc go to the "file" menu and select "Read file information". If the item already has a filename defined, the information from that file is (re-) read. Otherwise a dialog is opened which allows you to browse for the file from which you want the information to be read. Data Crow will read the information from the file and update the values in the item form. 
 
   </body>
 </html>
